--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<label for="name">Name</label>
+	<input type="text" required id="name" minlength="3" , maxlength="50"></input>
+	</br>
+	<a href="https://app.acciojob.com/web-idle?question=9766a13e-0007-484c-92e1-39e4566daf67">Portfolio</a>
+</br>
+	<label for="favColor">Favorite Color</label>
+	<input type="color" required id="favColor" ></input>
+</br>
+	<label for="range">Range</label>
+	<input type="text" required id="likeness" minlength="1" , maxlength="100"></input>
     <script type="text/javascript" src="./script.js">
 </script>
 
