--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<label for="name">Name</label>
+	<form method="POST">
+		<label for="name">Name</label>
 	<input type="text" required id="name" minlength="3" , maxlength="50"></input>
 	</br>
 	<a href="https://app.acciojob.com/web-idle?question=9766a13e-0007-484c-92e1-39e4566daf67">Portfolio</a>
@@ -18,6 +19,7 @@
 </br>
 	<label for="range">Range</label>
 	<input type="text" required id="likeness" minlength="1" , maxlength="100"></input>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
